--- a/index2.html
+++ b/index2.html
@@ -23,8 +23,10 @@
     <main>
       <h1>Мои сайты</h1>
       <p class="text-big"><b>от конструктора Tilda до вёрстки на HTML и CSS</b></p>
-      <p><a class="link-text" href="http://cat-home-with-love.tilda.ws/"><b>Сайт</b></a> кошачьего питомника из нескольких страниц был собран в Tilda</p>
+      <p><a class="link-text" href="https://mike9901.github.io/video/"><b>Сайт</b></a>Видео котики</p>
         <p><a class="link-text" href="https://mike9901.github.io/htmlf/"><b>hellowin</b></a> 
+          
+          
     </main>
     <footer>
       <a class="social" href=""><img src="https://mike9901.github.io/video/" width="100px" height="100px"/></a>
