--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
       <h1>Мои сайты</h1>
       <p class="text-big"><b>от конструктора Tilda до вёрстки на HTML и CSS</b></p>
       <p><a class="link-text" href="https://mike9901.github.io/video/"><b>Сайт</b></a>Видео котики</p>
-        <p><a class="link-text" href="https://mike9901.github.io/htmlf/"><b>hellowin</b></a> 
+        <p><a class="link-text" href="https://mike9901.github.io/html/"><b>hellowin</b></a> 
           
           
     </main>
